--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="crime_solved_label">Solved</string>
     <string name="crime_detail_label">Details</string>
     <string name="date_picker_title">Picker Date</string>
+    <string name="time_picker_title">Time Picker</string>
 </resources>
