--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="show_test_1">Test 1</string>
     <string name="subtitle_format">%d Crime(s)</string>
     <string name="hide_subtitle">Hide_Subtitle</string>
+    <string name="choose_suspect">Choose Suspect!</string>
+    <string name="send_crime_report">Crime Report</string>
 </resources>
