--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,25 @@
     <string name="time_picker_title">Time Picker</string>
     <string name="show_subtitle">Show SubTitle</string>
     <string name="show_test_1">Test 1</string>
+
+    <plurals name="subtitle_format">
+        <item quantity="one">%d Crime</item>
+        <item quantity="other">%d Crimes</item>
+    </plurals>
+
     <string name="subtitle_format">%d Crime(s)</string>
     <string name="hide_subtitle">Hide_Subtitle</string>
     <string name="choose_suspect">Choose Suspect!</string>
     <string name="send_crime_report">Crime Report</string>
+    <string name="crime_report_solved">The case is solved</string>
+    <string name="crime_report_unsolved">The case is not solve</string>
+    <string name="crime_report_no_suspect">There is no suspect</string>
+    <string name="crime_report_with_suspect">The suspect is %s.</string>
+    <string name="crime_report">%1$s!
+            The crime was discovered on %2$s. %3$s, and %4$s</string>
+    <string name="crime_report_subject">CriminalIntent Crime Report</string>
+    <string name="send_report">Send crime report via</string>
+    <string name="call_suspect">Call Suspect</string>
+    <string name="visible_text">Add Crime</string>
+    <string name="denied_permission_to_call">Permission request to call is denied</string>
 </resources>
